EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==01/01/2011==
Derision: UF: Tweaked Arrow_Struct and implemented new OPCode for changing player size.

==12/31/2010==
Derision: UF: Fix for extended duration buffs not reporting correctly after first tic.

==12/30/2010==
Derision: Added a new table aa_required_level_cost to allow specifying a required level and cost for each rank of an AA.
Derision: Implemented spell formulas required by AA versions of Harm Touch/Lay on Hands.
Caryatis: ShowStatWindow was changed to ShowWindow and had some features added
Caryatis: title_type = 0 for custom titles, 1 for first and last name and 2 for guild titles
Caryatis: Implemented a limit on how low a weapon speed can be when procs are calculated to reflect the innate swing speed limit

Required SQL:

utils/sql/svn/1790_required_aa_required_level_cost.sql

If there is no entry in this new table for a given rank of an AA, then the level (class_type) and cost_inc
from altadv_vars will be used as normal.

==12/28/2010==
Derision: /corpsedrag & /corpsedrop. Optional SQL: utils/sql/svn/1784_optional_corpsedrag_rules.sql

==12/25/2010==
Derision: Underfoot: Correct OP_SwapSpell
Derision: SoD/Underfoot: List of traders in /bazaar dropdown now works.
Derision: Implemented Advanced Tracking AA.

==12/24/2010==
Trevius: (Orkim) Zone Short Name restriction fixes.

==12/21/2010==
Derision: HoT: OP_SendFindableNPCs
gaeorn: bugfix for quest::movegrp to work with raids. no really, its fixed this time

==12/15/2010==
Trevius: Added an extra check for buffs while zoning to make sure it is a valid spell being applied.
Derision: Underfoot - Fix for /dismount not dispelling horse and Group Leadership fixes (opcode changes).
Congdar: fix for bot trading exploits

==12/13/2010==
gaeorn: fixed underfoot to properly handle new packet struct for LoadSpellSet_Struct
Derision: Underfoot - UCS should now retain /announce setting properly.
